Renaming 17scoreyumi to creditscoresok.net

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "17scoreyumi",
+  "name": "creditscoresok.net",
   "theme": "syntax",
   "version": "0.1.0",
   "description": "creditscoresok.net ◄ Get Your FREE Credit Score creditscoresok.net, Check Your Credit For Free. Get My Credit Score For Free. Start Here Today",
